istio/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-authtest
  namespace: authtest
spec:
  hosts:
    - '*'
  gateways:
    - istio-system/authtest-gateway
  http:
    - route:
        - destination:
            host: authtest
